--- a/preface.tex
+++ b/preface.tex
@@ -2,7 +2,7 @@
 
 
 
-このノートは, 京都大学大学院理学研究科数学・数理解析専攻数理解析系の数理解析特別講義Ⅰにおける集中講義「PCP定理の証明と応用」の講義ノートである.
+このノートは, 京都大学大学院理学研究科数学・数理解析専攻数理解析系で開催される集中講義「PCP定理の証明と応用」の講義ノートである.
 計算量(computational complexity)とは, 問題を解くために必要な計算リソースの量(例えば計算時間, 記憶領域のサイズ, 乱択や量子性の有無や量)を意味し, 計算量理論(computational complexity theory)とはそれぞれの問題の計算量を明らかにするための理論である.
 PCP定理とは, 判定問題(YesかNoで答える問題)の検証に要する計算量に関する結果であり,
 端的に言うと, ある命題が真であると主張する証明が文字列として与えられたとき,
