--- a/weak_PCP.tex
+++ b/weak_PCP.tex
@@ -362,7 +362,7 @@ PCP検証者であることを示す(cf. \cref{def:PCP})には, 任意の$\pi\in
   \end{align*}
   という$m$個の$\F_2$上の二次連立方程式からなる.
   
-  ここで$y_{i,j}=x_ix_j$としてこれらを並べたベクトル$y\in\F_2^{n^2}$を考える.
+  ここで$y_{i,j}=x_ix_j$としてこれらを並べたベクトル$y\in\F_2^{n^2}$を考える (ここでは$(i,j)$を$[n^2]$の元として扱う).
   各$k\in[m]$と$i,j\in[n]$に対し,
   \begin{align}
     &M_{k,(i,j)} = \begin{cases}
@@ -480,11 +480,11 @@ PCP検証者であることを示す(cf. \cref{def:PCP})には, 任意の$\pi\in
   
   次に\cref{lem:linear-equation-solution-verification}を, 線型方程式ではなく回路に対する検証に拡張する.
   \begin{lemma}{回路の検証}{circuit-verification}
-    あるベクトル$x\in\F_2^n$に対し, $\dist(\pi_x,\Had(x))\le 0.01$を満たすことが保証されているオラクル$\pi_x$への定数回のオラクルアクセスを用いて, 入力として与えられた回路$C$に対し, 
-    以下を満たす多項式時間乱択オラクルアルゴリズム$V^{\pi_x,\pi_y}(C)$が存在する:
+    あるベクトル$x\in\F_2^n$に対し, $\pi_x=\Had_n(x)$を満たすことが保証されているオラクル$\pi_x$およびもう一つのオラクル$\pi$への定数回のオラクルアクセスを用いて, 入力として与えられた回路$C$に対し, 
+    以下を満たす多項式時間乱択オラクルアルゴリズム$V^{\pi_x,\pi}(C)$が存在する:
     \begin{itemize}
-      \item $C(x)=1$ならば, ある$\pi_y\in \F_2^{n^2}$が存在して, $V^{\pi_x,\pi_y}(C)$は確率$1$で受理する.
-      \item $C(x)=0$ならば, 任意の$\pi_y\in \F_2^{n^2}$に対し, $V^{\pi_x,\pi_y}(C)$は確率$0.99$で拒否する.
+      \item $C(x)=1$ならば, ある$\pi\in \F_2^{2^{n^2}}$が存在して, $V^{\pi_x,\pi}(C)$は確率$1$で受理する.
+      \item $C(x)=0$ならば, 任意の$\pi\in \F_2^{2^{n^2}}$に対し, $V^{\pi_x,\pi}(C)$は確率$0.99$で拒否する.
     \end{itemize}
   \end{lemma}
 
@@ -493,7 +493,7 @@ PCP検証者であることを示す(cf. \cref{def:PCP})には, 任意の$\pi\in
     さらにこの$\QuadEQ$のインスタンス$(f_k)_{k\in[m]}$に対し, \cref{eq:M-matrix,eq:b-vector}で定義される行列$M\in\F^{m\times n^2}$とベクトル$b\in\F^m$を構成する.
     このとき, 任意の$x\in\F_2^n$に対し, 以下は同値である:
     \begin{itemize}
-      \item $C(x)=1$
+      \item $C(x)=1$ (ここでは$x$を$\binset^n$の元として扱う)
       \item 全ての$k\in[m]$に対し, $f_k(x)=0$
       \item $y_{i,j}:=x_i\cdot x_j$で定まるベクトル$y\in\F_2^{n^2}$は$My=b$を満たす.
     \end{itemize}
@@ -501,39 +501,146 @@ PCP検証者であることを示す(cf. \cref{def:PCP})には, 任意の$\pi\in
     以下では, 三つ目の条件を検証するPCP検証者を与える.
 
     \begin{algo}{}{QuadEQ-PCP}
-      PCP検証者$V^{\pi_x,\pi_y}(M,b)$を以下で記述する:
+      PCP検証者$V^{\pi_x,\pi}(M,b)$を以下で記述する:
       \begin{enumerate}
-        \item 入力として$M\in\F_2^{m\times n^2}$と$b\in\F_2^m$および証明として$\pi_x\colon\F_2^n\to\F_2$と$\pi_y\colon\F_2^{n^2}\to\F_2$へのオラクルアクセスを受け取る.
-        \item \cref{thm:linearity-test}のアルゴリズムを$\pi_x$と$\pi_y$のそれぞれに対して実行し, それぞれが線形関数に$0.01$-近いかどうかを検証する. もしいずれかの実行においてこのアルゴリズムが拒否したら拒否する.
-        \item \cref{lem:tensor-product-verification}の検証者を, オラクルとして$\pi_x$と$\pi_y$を用いて実行する. この検証者が拒否したら拒否する.
-        \item \cref{lem:linear-equation-solution-verification}の検証者を, 入力として$(M,b)$, オラクルとして$\pi_y$を用いて実行する. この検証者が拒否したら拒否する.
+        \item 入力として$M\in\F_2^{m\times n^2}$と$b\in\F_2^m$および証明として$\pi_x\colon\F_2^n\to\F_2$と$\pi\colon\F_2^{n^2}\to\F_2$へのオラクルアクセスを受け取る. ただし補題の仮定より$\pi_x=\Had_n(x)$である.
+        \item \cref{thm:linearity-test}のアルゴリズムを$\pi$に対して実行し, $\pi$が線形関数に$0.01$-近いかどうかを検証する. もしこの実行においてこのアルゴリズムが拒否したら拒否する.
+        \item \cref{lem:tensor-product-verification}の検証者を, オラクルとして$\pi_x$と$\pi$を用いて実行する. この検証者が拒否したら拒否する.
+        \item \cref{lem:linear-equation-solution-verification}の検証者を, 入力として$(M,b)$, オラクルとして$\pi$を用いて実行する. この検証者が拒否したら拒否する.
         \item ここまでのステップで拒否していなければ受理して終了する.
       \end{enumerate}
     \end{algo}
 
-    この検証者$V^{\pi_x,\pi_y}$が所望のPCP検証者であることを確認する.
+    この検証者$V^{\pi_x,\pi}$が所望のPCP検証者であることを確認する.
     \cref{thm:linearity-test,thm:local-verification-LinEq,lem:tensor-product-verification,lem:linear-equation-solution-verification}ではそれぞれオラクルアクセスは$O(1)$回であり, 内部で用いるランダムビットは$O(n^2)$である.
 
     入力$(M,b)$が, $y_{i,j}=x_i\cdot x_j$で定まるベクトル$y\in\F_2^{n^2}$に対して$My=b$を満たすとする.
-    この$y$に対して, $\pi_y=\Had_{n^2}(y)$とする (補題の仮定より, $\pi_x=\Had_n(x)$である).
-    このとき,
+    この$y$に対して, $\pi=\Had_{n^2}(y)$とする (補題の仮定より, $\pi_x=\Had_n(x)$である).
+    このとき, 
     \begin{itemize}
-      \item ステップ2では, $\pi_x,\pi_y$はどちらも線形関数であるため, 拒否する確率は$0$である.
+      \item ステップ2では, $\pi_x,\pi$はどちらも線形関数であるため, 拒否する確率は$0$である.
       \item ステップ3では, 実際に全ての$i,j\in [n]$に対して$y_{i,j}=x_i\cdot x_j$が成り立つため, 拒否する確率は$0$である.
       \item ステップ4では, 実際に$y$は$My=b$の解であるため, 拒否する確率は$0$である.
     \end{itemize}
-    以上より, $V^{\pi_x,\pi_y}((f_k)_{k\in[m]})$は確率$1$で受理する.
+    以上より, $V^{\pi_x,\pi}$は確率$1$で受理する.
 
-    次に$(f_k)$がYesインスタンスであるとする.
-    任意の$\pi_x\colon\F^n\to\F$と$\pi_y\colon\F^{n^2}\to\F$を考える.
+    次に$C(x)=0$であるとする.
+    任意の$\pi\colon\F^{n^2}\to\F$を考える ($\pi_x=\Had_n(x)$であることに留意).
 
     \begin{itemize}
-      \item $\dist(\pi_x,\Had_n) \ge 0.01$ または $\dist(\pi_y,\Had_{n^2})\ge 0.01$ ならば, $V^{\pi_x,\pi_y}((f_k)_{k\in[m]})$はステップ3において確率$0.99$で拒否する. 以降では$\dist(\pi_x,\Had_n) < 0.01$かつ$\dist(\pi_y,\Had_{n^2}) < 0.01$とし, $\pi_x,\pi_y$に最も近い線形関数をそれぞれ$\Had_n(x),\Had_{n^2}(y)$とする.
-      \item ステップ4は, \cref{lem:tensor-product-verification}の仮定が満たされているため, 確率$0.99$で拒否する. 以降ではさらに$x\in\F^n,y\in\F^{n^2}$が, 全ての$i,j\in [n]$に対し$y_{i,j}=x_i\cdot x_j$を満たすことが保証されているとする.
-      \item ステップ5は, $My\ne b$であるため, \cref{lem:linear-equation-solution-verification}の検証者が確率$0.99$で拒否する.
+      \item $\dist(\pi,\Had_{n^2})\ge 0.01$ ならば, $V^{\pi_x,\pi}((f_k)_{k\in[m]})$はステップ3において確率$0.99$で拒否する. 以降では$\dist(\pi,\Had_{n^2}) < 0.01$とし, $\pi$に最も近い線形関数を$\Had_{n^2}(y)$とする.
+      \item ステップ3は, \cref{lem:tensor-product-verification}の仮定が満たされているため, 確率$0.99$で拒否する. 以降ではさらに$x\in\F^n,y\in\F^{n^2}$が, 全ての$i,j\in [n]$に対し$y_{i,j}=x_i\cdot x_j$を満たすことが保証されているとする.
+      \item ステップ4は, $My\ne b$であるため, \cref{lem:linear-equation-solution-verification}の検証者が確率$0.99$で拒否する.
     \end{itemize}
-    以上より, $V^{\pi_x,\pi_y}((f_k)_{k\in[m]})$が一度のステップ3-5のループで拒否する確率は少なくとも$0.97$である.
+    以上より, $V^{\pi_x,\pi}$がステップ3-5のループで拒否する確率は少なくとも$0.97$である (ステップ3-5を2回繰り返せばこの確率は$0.99$以上になる).
   \end{proof}
     
+  最後に, \cref{lem:circuit-verification}の証明を少し修正して弱いPCP定理を証明する.
+  \begin{proof}[\cref{thm:weak-PCP-theorem}の証明.]
+    Cook-Levinの定理(\cref{thm:Cook-Levin})より, 任意の$L\in\NP$は回路充足判定問題に帰着できるため, この問題に対してPCP検証者を与えればよい.
+    \cref{lem:circuit-verification}の検証者を考える.
 
+    \cref{alg:QuadEQ-PCP}を少し修正した以下の検証者$V^{\pi_x,\pi}(C)$を考える:
+    \begin{algo}{}{weak-PCP}
+      PCP検証者$V^{\pi_x,\pi}(C)$を以下で記述する:
+      \begin{enumerate}
+        \item 入力で与えられた回路$C\colon\binset^n\to\binset$に対し, \cref{lem:circuit-verification}の証明で考えた行列$M\in\F_2^{m\times n^2}$とベクトル$b\in\F_2^m$を計算する.
+        \item \cref{thm:linearity-test}のアルゴリズムを$\pi_x,\pi$に対して実行し, $\pi_x,\pi$がそれぞれ線形関数に$0.01$-近いかどうかを検証する. もしいずれかの実行においてこのアルゴリズムが拒否したら拒否する.
+        \item \cref{lem:tensor-product-verification}の検証者を, オラクルとして$\pi_x$と$\pi$を用いて実行する. この検証者が拒否したら拒否する.
+        \item \cref{lem:linear-equation-solution-verification}の検証者を, 入力として$(M,b)$, オラクルとして$\pi$を用いて実行する. この検証者が拒否したら拒否する.
+        \item ここまでのステップで拒否していなければ受理して終了する.
+      \end{enumerate}
+    \end{algo}
 
+    回路充足判定問題のインスタンス$C$がYesインスタンスならば, ある$x\in\binset^n$が存在して$C(x)=1$となる. この$x$を$\F_2^n$の元とみなして, $y_{i,j}:=x_i\cdot x_j$, $\pi_x = \Had_n(x)$, $\pi = \Had_{n^2}(y)$とすれば,
+    $V^{\pi_x,\pi}(C)$は確率$1$で受理する.
+
+    回路$C$がNoインスタンスであるとし, 任意の$\pi_x\colon \F_2^n\to\F_2$と$\pi\colon \F_2^{n^2}\to\F_2$を考える.
+    \begin{itemize}
+      \item $\dist(\pi_x,\Had_n)\ge 0.01$ または $\dist(\pi,\Had_{n^2})\ge 0.01$ ならば, $V^{\pi_x,\pi}(C)$はステップ2において確率$0.99$で拒否する. 以降では$\dist(\pi_x,\Had_n) < 0.01$かつ$\dist(\pi,\Had_{n^2}) < 0.01$とし, $\pi_x,\pi$に最も近い線形関数をそれぞれ$\Had_n(x),\Had_{n^2}(y)$とする.
+      \item ステップ3は, \cref{lem:tensor-product-verification}の仮定が満たされているため, 確率$0.99$で拒否する. 以降ではさらに$x\in\F^n,y\in\F^{n^2}$が, 全ての$i,j\in [n]$に対し$y_{i,j}=x_i\cdot x_j$を満たすことが保証されているとする.
+      \item ステップ4は, $My\ne b$であるため, \cref{lem:linear-equation-solution-verification}の検証者が確率$0.99$で拒否する.
+    \end{itemize}
+    以上より, $V^{\pi_x,\pi}(C)$が一度のステップ3-5のループで拒否する確率は少なくとも$0.97$である.
+  
+  \end{proof}
+
+\section{二入力回路の割り当てに対するPCP検証者}
+\cref{lem:circuit-verification}はある意味で, $x\in\binset^n$を全て見ることなく, 与えられた回路$C$に対し$C(x)=1$となるかどうかを検証するPCP検証者を構成した (実際には$\pi_x=\Had_n(x)$および追加の情報$\pi_y$へのオラクルアクセスも仮定している).
+
+ここでは回路$C$が二つの入力$x,y\in\binset^n$を受け取る場合でも同様のPCP検証者が構成できることを示す.
+この設定は人工的な問題設定に見えるが, PCP定理の証明において重要な役割を果たす.
+
+\begin{theorem}{二入力回路の割り当てに対するPCP検証者}{two-input-circuit-PCP}
+  以下を満たす多項式時間乱択オラクルアルゴリズム$V^{\pi_x,\pi_y,\pi}(C)$が存在する:
+  \begin{itemize}
+    \item 入力として$C\colon\binset^n\times\binset^n\to\binset$および三つのオラクル$\pi_x,\pi_y, \pi$へのオラクルアクセスを受け取る.
+    \item オラクル$\pi_x,\pi_y$はそれぞれ, あるベクトル$x,y\in\F_2^n$に対し$\pi_x=\Had_n(x),\pi_y=\Had_n(y)$を満たすことが保証されている (オラクル$\pi$は任意).
+    \item $C(x,y)=1$ならば, ある$\pi\in \binset^{2^{2n} + 2^{4n^2}}$が存在して, $V^{\pi_x,\pi_y,\pi}(C)$は確率$1$で受理する.
+    \item $C(x,y)=0$ならば, 任意の$\pi\in \binset^{2^{2n} + 2^{4n^2}}$に対し, $V^{\pi_x,\pi_y,\pi}(C)$は確率$0.99$で拒否する.
+  \end{itemize}
+\end{theorem}
+
+\cref{thm:two-input-circuit-PCP}の証明においては, ある文字列$x\in\binset^n$が別の文字$\overline{x}\in\binset^{n+m}$の接頭辞かどうかを(オラクルアクセスを用いて)局所的に検証することを意味する以下の補題を用いる.
+\begin{lemma}{接頭辞の検証}{concatenation-test}
+  以下を満たす多項式時間乱択オラクルアルゴリズム$V_0^{\Had_n(x),\pi}$が存在する:
+  \begin{itemize}
+    \item 入力として$1^{n+m}$を受け取り, 二つのオラクル$\Had_n(x)\colon \F_2^n\to\F_2$と$\pi\colon \F_2^{n+m}\to\F_2$へのオラクルアクセスを受け取る. ここで, 二つ目のオラクル$\pi$は, あるベクトル$\overline{x}\in\F_2^{n+m}$に対し$\dist(\pi,\Had_{n+m}(\overline{x})) < 0.01$を満たすことが保証されている.
+    \item このような$\overline{x}$に対し, $\overline{x}$の最初の$n$文字が$x$に一致するならば, 確率$1$で受理する.
+    \item そうでなければ, 確率$0.99$で拒否する.
+  \end{itemize}
+\end{lemma}
+\begin{proof}
+  アルゴリズム$V_0^{\Had_n(x),\Had_{n+m}(\overline{x})}$は単純で, 以下のように記述できる:
+  \begin{enumerate}
+    \item 一様ランダムなベクトル$r\sim\F_2^n$を選び, $\overline{r}=(r,0^m)\in\F_2^{n+m}$とする.
+    \item $\Had_n(x)(r) \ne \Had_{n+m}(\overline{x})(\overline{r})$ならば拒否する.
+    \item ステップ1-2を10回繰り返し, 一度も拒否しなければ受理して終了する.
+  \end{enumerate}
+
+  $\overline{x}$の最初の$n$文字を$y\in\binset^n$とする.
+  このとき, ステップ2において$\Had_{n+m}(\overline{x})(\overline{r}) = \Had_{n+m}(\overline{x})(r,0^m) = \Had_{n+m}(y,0^m) = \Had_{n}(y)(r)$となる.
+  従って, $x=y$の場合はどのような$r\sim\F_2^n$を選んでも$\Had_n(x)(r) = \Had_n(y)(r)$となり, 確率$1$でアルゴリズムは受理する.
+  一方で$x\ne y$の場合は\cref{eq:linear-equation-property}より, 一度の試行で少なくとも確率$1/2$でアルゴリズムは拒否する.
+  よって, ステップ1-2を10回だけ繰り返せば少なくとも確率$1-2^{-10}\ge 0.99$でアルゴリズムは拒否する.
+\end{proof}
+
+\begin{remark}{接尾辞の検証}{suffix-test}
+  \cref{lem:concatenation-test}のアルゴリズムは$x$が$\overline{x}$の接頭辞かどうかの検証を行うが, 同様のアルゴリズム ($0^m$と$r$の順番を反転させるだけ)を考えれば接尾辞の検証にも利用できる.
+\end{remark}
+
+\begin{proof}[\cref{thm:two-input-circuit-PCP}の証明.]
+三つ目のオラクル$\pi\in\binset^{2^{2n} + 2^{4n^2}}$を, 以下の二つの関数の組として解釈する:
+\begin{itemize}
+  \item $\pi_1 \colon \F_2^{2n} \to \F_2$. この関数は, ベクトル$\overline{x}:=(x,x')\in\F_2^{2n}$に対して$\pi_1 = \Had_{2n}(\overline{x})$であることを想定する.
+  \item $\pi_2 \colon \F_2^{4n^2} \to \F_2$. この関数は, 上記のベクトル$\overline{x}$に対し$\overline{y}_{i,j} = \overline{x}_i\cdot \overline{x}_j$で定まるベクトル$\overline{y}\in\F_2^{4n^2}$に対し, $\pi_2 = \Had_{4n^2}(\overline{y})$であることを想定する.
+\end{itemize}
+なお, 実際には$\pi_1,\pi_2$は関数としては解釈できるが, その関数が線形関数であるとは限らない.
+\cref{alg:QuadEQ-PCP}を少し修正した以下の検証者$V^{\pi_x,\pi_{y},\pi}(C)$を考える:
+
+\begin{algo}{}{two-input-circuit-PCP}
+  PCP検証者$V^{\pi_x,\pi_{y},\pi}(C)$を以下で記述する:
+  \begin{enumerate}
+    \item オラクル$\pi$を二つの関数$\pi_1\colon\F_2^{2n}\to\F_2,\pi_2\colon\F_2^{4n^2}\to\F_2$の組として解釈する.
+    \item 入力で与えられた回路を$C\colon\binset^{2n}\to\binset$とみなし, \cref{lem:circuit-verification}の証明で考えた行列$M\in\F_2^{m\times {(2n)^2}}$とベクトル$b\in\F_2^m$を計算する.
+    \item \cref{thm:linearity-test}のアルゴリズムを$\pi_1,\pi_2$に対して実行し, $\pi_1,\pi_2$がそれぞれ線形関数に$0.01$-近いかどうかを検証する. もしいずれかの実行においてこのアルゴリズムが拒否したら拒否する.
+    \item $\pi_1$に最も近い線形関数を$\Had_{2n}(\overline{x})$としたとき, $\overline{x}\in\F_2^{2n}$の前半の$n$文字が$x$, 後半の$n$文字が$y$に一致するかどうかをそれぞれ\cref{lem:concatenation-test}のアルゴリズムを用いて検証する. もしいずれかの検証においてこのアルゴリズムが拒否したら拒否する.
+    \item \cref{lem:tensor-product-verification}の検証者を, オラクルとして$\pi_1$と$\pi_2$を用いて実行する. この検証者が拒否したら拒否する.
+    \item \cref{lem:linear-equation-solution-verification}の検証者を, 入力として$(M,b)$, オラクルとして$\pi_2$を用いて実行する. この検証者が拒否したら拒否する.
+    \item ここまでのステップで拒否していなければ受理して終了する.
+  \end{enumerate}
+\end{algo}
+
+文字列$x,y$を結合して得られる文字列を$z=(x,y)\in\F_2^{2n}$とし,
+$w\in\F_2^{(2n)^2}$を, $w_{i,j} = z_i\cdot z_j$で定まるベクトルとする.
+もし$C(x,y)=1$ならば, $\pi_1 = \Had_{2n}(z)$, $\pi_2 = \Had_{(2n)^2}(w)$に対し, $\pi=(\pi_1,\pi_2)$とすることによって, 確率$1$で$V^{\pi_x,\pi_{y},\pi}(C)$は受理する.
+
+一方で$C(x,y)=0$とし, 任意の$\pi_1,\pi_2$を考える.
+\begin{itemize}
+  \item $\pi_1,\pi_2$が線形関数から$0.01$-遠い場合, ステップ3において確率$0.99$で拒否する. 従って以後はある$z'\in\F_2^{2n}$と$w'\in\F_2^{(2n)^2}$が存在して, $\dist(\pi_1, \Had_{2n}(z'))<0.01$, $\dist(\pi_2, \Had_{(2n)^2}(w'))<0.01$を仮定する.
+  \item $z'\ne z$ならば, ステップ4において確率$0.99$で拒否する. 従って以後は$z'=z$と仮定する.
+  \item $w'\ne w$ならば, ステップ5において確率$0.99$で拒否する. 従って以後は$w'=w$と仮定する.
+  \item ステップ6において, $Mw'\ne b$であるため, 確率$0.99$で拒否する.
+\end{itemize}
+以上より, 任意の$\pi_1,\pi_2$に対し, ステップ2-3において確率$0.99$で拒否する.
+\end{proof}
